tests/paczka1/fuzzy1/48288859.err
Error in line 15: ZtFUVIjId A150 46,0
Error in line 19: ZtFUVIjId A418 33,7
Error in line 22: ZtFUVIjId A150 78,7
Error in line 36: S384 A150 67,0
